openshift-resources/backend/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: image-registry.openshift-image-registry.svc:5000/harishkumar-nimmala-dev/backend:latest
          ports:
            - containerPort: 3000
